# autoforge

./: .aider.conf.yml  .env.example  .gitignore  .windsurfrules  AGENTS.md  ARTICLE_REASONING_GUIDE.md  AutoForge_Academic_Audit.docx  AutoForge_Academic_Audit_V2.docx  CLAUDE.md  CODE_REVIEW.md  CODE_REVIEW_RISK_ASSESSMENT.md  README.md  forge.py  pyproject.toml  pytest.ini  requirements.txt  setup.bat  setup.sh
.claude/: settings.json  settings.local.json
.claude-plugin/: marketplace.json
.cursor/rules/: autoforge.mdc
.github/: copilot-instructions.md
.github/workflows/: publish.yml  sensitive-files.yml
.tmp_engine_tests/bac1b54d50cb4d1a8dcbc60c0913fc16/: registry.db-shm  registry.db-wal
autoforge/: __init__.py
autoforge/cli/: __init__.py  app.py  display.py  interactive.py  setup_wizard.py
autoforge/contracts/: __init__.py  paper_repro_contract.schema.json
autoforge/data/constitution/: CONSTITUTION.md  quality_gates.md
autoforge/data/constitution/agents/: architect.md  builder.md  director.md  reviewer.md  scanner.md  tester.md
autoforge/data/constitution/workflows/: build.md  import.md  refactor.md  spec.md  verify.md
autoforge/engine/: __init__.py  adaptive_compute.py  agent_base.py  agent_debate.py  article_reasoning.py  article_verifier.py  auth.py  autonomous_discovery.py  benchmark_eval.md  benchmark_eval.py  capability_dag.py  checkpoints.py  cloud_prover.py  config.py  curriculum_learning.py  daemon.py  dag_federation.py  dense_retrieval.py  deploy_guide.py  development_harness.py  dynamic_constitution.py  evolution.py  evomac.py  experiment_loop.py  formal_verify.py  git_manager.py  hierarchical_decomp.py  hil.py  knowledge_distiller.py  ldb_debugger.py  lean_prover.py  literature_search.py  llm_router.py  lock_manager.py  multi_prover.py  orchestrator.py  paper_formalizer.py  paper_repro.py  paper_writer.py  peer_review.py  (+27 more)
autoforge/engine/agents/: __init__.py  architect.py  builder.py  director.py  gardener.py  reviewer.py  scanner.py  tester.py
autoforge/engine/channels/: __init__.py  bridge_agent.py  telegram_bot.py  webhook.py
autoforge/engine/harness/: dataset.py  environment.py  judge.py  openai_export.py  report.py  runner.py
autoforge/engine/kernel/: __init__.py  checkpoint.py  contracts.py  events.py  evidence.py  harness_overlay.py  inspector.py  plan.py  profiles.py  protocol.py  replay.py  run_store.py  schema.py  session.py  verdict.py  workspace.py
autoforge/engine/provers/: __init__.py  lean_core.py  lean_lake.py  multi_prover.py  pantograph_repl.py  proof_library.py  proof_search.py
autoforge/engine/runtime/: artifacts.py  commands.py  dependencies.py  env.py  errors.py  fs.py  journal.py  rate_limit.py  runtime.py  telemetry.py  trace.py
autoforge/engine/tools/: __init__.py  github_search.py  search.py  web.py
cli/: app.py  interactive.py  setup_wizard.py
constitution/agents/: architect.md  director.md  gardener.md  reviewer.md  scanner.md
constitution/workflows/: deliver.md  review.md  spec.md
docker/: Dockerfile.sandbox
docs/: CLAUDE_PLUGIN.md  DEVELOPMENT_HARNESS_REVIEW.md  HARNESS_REFACTOR_TODO.md  KERNEL_ARCHITECTURE.md  PAPER_REPRODUCTION.md  README_CN.md  README_EN.md  UI_HARNESS_INTEGRATION.md
docs/contracts/: paper_repro_contract_v1.md
engine/: __init__.py  agent_base.py  config.py  daemon.py  deploy_guide.py  llm_router.py  lock_manager.py  orchestrator.py  project_registry.py  sandbox.py
engine/agents/: __init__.py  architect.py  builder.py  director.py  gardener.py  reviewer.py  scanner.py  tester.py
engine/channels/: telegram_bot.py  webhook.py
examples/: blog-site.txt  todo-app.txt
plugins/autoforge/: README.md
plugins/autoforge/.claude-plugin/: plugin.json
plugins/autoforge/skills/academic-repro/: SKILL.md
plugins/autoforge/skills/autoforge-runtime-overview/: SKILL.md
plugins/autoforge/skills/harness-evals-export/: SKILL.md
plugins/autoforge/skills/long-run-runtime/: SKILL.md
plugins/autoforge/skills/software-forge/: SKILL.md
scripts/: check_sensitive_files.py  dag_federation_server.py  git_sync.py  install_autoforgeai.ps1
services/: autoforge.service  com.autoforge.daemon.plist
tests/: smoke_test.py  test_academic.py  test_academic_hardening.py  test_academic_p0_p2_fixes.py  test_bridge_agent.py  test_dag_federation.py  test_dag_federation_server.py  test_development_harness.py  test_engines.py  test_kernel.py  test_repro_contract.py  test_ui_harness.py
