[build-system]

requires = ["setuptools>=68.0", "wheel"]

build-backend = "setuptools.build_meta"



[project]

name = "autoforgeai"

version = "2.7.23"
description = "AutoForge AI-powered multi-agent development platform"

readme = "README.md"

license = "MIT"

requires-python = ">=3.10"

dependencies = [
    "anthropic>=0.84.0",
    "openai>=1.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "InquirerPy>=0.3.4",
    "tomli-w>=1.0",
    "tomli>=2.0.2; python_version < '3.11'",
    "aiosqlite>=0.20.0",
    "httpx>=0.27",
]

authors = [

    {name = "AlyciaBHZ"},

]

keywords = ["ai", "agents", "code-generation", "multi-agent", "llm", "automation"]

classifiers = [

    "Development Status :: 4 - Beta",

    "Intended Audience :: Developers",


    "Programming Language :: Python :: 3",

    "Programming Language :: Python :: 3.10",

    "Programming Language :: Python :: 3.11",

    "Programming Language :: Python :: 3.12",

    "Programming Language :: Python :: 3.13",

    "Topic :: Software Development :: Code Generators",

]



[project.urls]

Homepage = "https://github.com/AlyciaBHZ/autoforge"

Repository = "https://github.com/AlyciaBHZ/autoforge"

Issues = "https://github.com/AlyciaBHZ/autoforge/issues"



[project.optional-dependencies]

openai = ["openai>=1.0"]

google = ["google-genai>=1.0", "google-auth>=2.0"]

search = ["duckduckgo-search>=7.0,<9.0", "html2text>=2024.2"]

dev = ["pytest>=8.0"]

channels = [

    "fastapi>=0.115.0",

    "uvicorn>=0.32.0",

    "python-telegram-bot>=21.0",

]

all = [

    "openai>=1.0",

    "google-genai>=1.0",

    "google-auth>=2.0",

    "duckduckgo-search>=7.0,<9.0",

    "html2text>=2024.2",

    "fastapi>=0.115.0",

    "uvicorn>=0.32.0",

    "python-telegram-bot>=21.0",

    "pytest>=8.0",

]



[project.scripts]

autoforgeai = "autoforge.cli.app:main"



[tool.setuptools.packages.find]

include = ["autoforge*"]



[tool.setuptools.package-data]

autoforge = ["data/**/*", "contracts/*.json"]
